# Python-Systemctl-Library

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tes.py
.github/workflows/: python-publish.yml
pysysctllib/: __init__.py  service.py
pysysctllib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pysysctllib/models/: StatusModel.py  __init__.py
pysysctllib/modules/: enable.py  get_description.py  get_main_pid.py  get_unit_file_state.py  is_masked.py  reload.py  reload_daemon.py  restart.py  show_full.py  start.py  status.py
pysysctllib/modules/unit/: is_active.py  list_dependencies.py  main_pid.py  properties.py  show.py  status.py  stop.py  unit_file_state.py
pysysctllib/modules/unit_file/: disable.py  is_enabled.py  is_masked.py  mask.py  unmask.py
