[project]
name = "pysysctllib"
version = "0.1.0"
description = "Simple libarary for control systemctl services"
authors = [
    {name = "hlnikniky",email = "orekhovs09@gmail.com"}
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
